# agent-risk-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_risk_lab/: __init__.py
agent_risk_lab/core/: __init__.py  models.py  storage.py
docs/plans/: 2026-03-08-agent-risk-lab-design.md
tests/test_core/: test_models.py  test_storage.py
