[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-risk-lab"
version = "0.1.0"
description = "LLM risk detection toolkit: online judge, A/B experiment analysis, and evaluation regression"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "agent-risk-lab contributors" }]
keywords = ["llm", "risk", "safety", "hallucination", "evaluation", "judge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.5",
    "click>=8.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
judge = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-api>=1.20",
    "aliyun-log-python-sdk>=0.9",
    "aiohttp>=3.9",
]
experiment = [
    "scipy>=1.11",
    "pandas>=2.0",
]
eval = [
    "jinja2>=3.1",
    "schedule>=1.2",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]
all = [
    "agent-risk-lab[judge,experiment,eval]",
]

[project.scripts]
arl = "agent_risk_lab.cli:main"

[project.urls]
Homepage = "https://github.com/guangxush/agent-risk-lab"
Repository = "https://github.com/guangxush/agent-risk-lab"
Issues = "https://github.com/guangxush/agent-risk-lab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_risk_lab*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=agent_risk_lab --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
